<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_greeting"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_about_button"
        app:backgroundTint="@null"
        android:background="@drawable/btn_gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_greetings" />

    <TextView
        android:id="@+id/main_info"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/main_info"
        android:textColor="#263238"
        app:layout_constraintBottom_toTopOf="@+id/main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_greetings"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/football_txt_image"
        android:layout_width="294dp"
        android:layout_height="136dp"
        android:contentDescription="@string/image_about"
        app:layout_constraintBottom_toTopOf="@+id/main_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_info"
        app:srcCompat="@drawable/football_text_img" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_or"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/btn_signiin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_signin_button"
        app:backgroundTint="@null"
        android:background="@drawable/btn_gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button"
        app:layout_constraintVertical_bias="0.387" />

</androidx.constraintlayout.widget.ConstraintLayout>