<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignedInActivity">

    <TextView
        android:id="@+id/tv_signedingreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signiedin_greeting"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/tv_about_gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signiedin_about"
        android:textColor="#263238"
        app:layout_constraintBottom_toTopOf="@+id/iv_maradona"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_signedingreeting"
        app:layout_constraintVertical_bias="0.083" />

    <ImageView
        android:id="@+id/iv_maradona"
        android:layout_width="214dp"
        android:layout_height="157dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_zidane"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/maradona_hand_goal"
        android:contentDescription="@string/maradona_description" />

    <ImageView
        android:id="@+id/iv_zidane"
        android:layout_width="296dp"
        android:layout_height="147dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_greece_winning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/zidane_headbutt"
        android:contentDescription="@string/zidane_description" />

    <ImageView
        android:id="@+id/iv_greece_winning"
        android:layout_width="400dp"
        android:layout_height="129dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/greece_winning_euros"
        android:contentDescription="@string/greece_description" />

</androidx.constraintlayout.widget.ConstraintLayout>